have a nice day!

--- a/indexes/nsc1025/216.md
+++ b/indexes/nsc1025/216.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】抵押贷款利率上升造成房市疲软](../../pages/nsc1025/n13833781.md) 
+#### [周晓辉：军方少将政协委员资格被撤 出何事？](../../pages/nsc1025/n13833866.md) 
+#### [【名家专栏】开放边境 谁自食其果？](../../pages/nsc1025/n13833776.md) 
+#### [颜丹：极端“防疫”违宪 中国人有理由抗争](../../pages/nsc1025/n13833249.md) 
 #### [王赫：不杀孙力军释放的三个政治信号](../../pages/nsc1025/n13833326.md) 
 #### [张菁：疫情封控下骗钱钓色 乱象何其多](../../pages/nsc1025/n13833242.md) 
 #### [王友群：傅政华被判死缓的四大启示](../../pages/nsc1025/n13833274.md) 
@@ -26,10 +30,6 @@
 #### [刘元明：能上能下是冲哪个常委去的？](../../pages/nsc1025/n13831514.md) 
 #### [周晓辉：党媒报导有变化 是党中央而非习统揽全局](../../pages/nsc1025/n13831513.md) 
 #### [【名家专栏】中共生物公司为何在美国各地运营](../../pages/nsc1025/n13831288.md) 
-#### [周晓辉：傅政华孙力军露脸受审 唐山凶手不露有鬼](../../pages/nsc1025/n13831361.md) 
-#### [王赫：2022中共与国际金融资本走进十字路口？](../../pages/nsc1025/n13831097.md) 
-#### [杨威：中共领导人为何缺席联合国大会](../../pages/nsc1025/n13830895.md) 
-#### [乾元：“十户长”是极端户籍管理的再版](../../pages/nsc1025/n13830892.md) 
 
 ---
-#### 第 [ [215](./215.md) / [214](./214.md) / [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) ] 页
+#### 第 [ [216](./216.md) / [215](./215.md) / [214](./214.md) / [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) ] 页
