--- a/indexes/nsc993/89.md
+++ b/indexes/nsc993/89.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [张乐：海外大法小弟子心系中国人安危 打电话劝三退](../../pages/nsc993/n13835091.md) 
+#### [【网海拾贝】原以为只是回到文革，没想到却回到了秦朝](../../pages/nsc993/n13835064.md) 
 #### [洪博：科学没认证无神论 超九成最著名科学家相信神](../../pages/nsc993/n13834361.md) 
 #### [【网海拾贝】万众参与中南海听床 凸显国人当下的政治焦虑](../../pages/nsc993/n13834381.md) 
 #### [【网海拾贝】你们判的这个陈继志是真的陈继志吗？](../../pages/nsc993/n13833607.md) 
@@ -28,8 +30,6 @@
 #### [王清鹏：共产党下台，你做好准备了吗？（4）](../../pages/nsc993/n13830155.md) 
 #### [韩笑：共产党已到穷途末路 韩女士四劝善良人远离它](../../pages/nsc993/n13829505.md) 
 #### [贵阳大巴事故中的逝者与生者](../../pages/nsc993/n13829479.md) 
-#### [宋征时：中共二十大代表周洪许的民间档案（二）](../../pages/nsc993/n13829077.md) 
-#### [【网海拾贝】贵州大巴侧翻，相当于多少人感染新冠？](../../pages/nsc993/n13828801.md) 
 
 ---
 #### 第 [ [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) ] 页
