--- a/indexes/nsc1028/63.md
+++ b/indexes/nsc1028/63.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【征文选登】官场生态迅速恶化 根源何在？](../../pages/nsc1028/n13836119.md) 
 #### [听党史专家司马璐揭秘中共（8）：周恩来借刀杀人](../../pages/nsc1028/n13834429.md) 
 #### [听党史专家司马璐揭秘中共（7）：陈独秀](../../pages/nsc1028/n13833408.md) 
 #### [听党史专家司马璐揭秘中共（6）：陈炯明、吴佩孚与中共](../../pages/nsc1028/n13832892.md) 
@@ -29,7 +30,6 @@
 #### [周恩来的狡诈和无情](../../pages/nsc1028/n13810621.md) 
 #### [林辉：“当代牧马人”曲啸演讲骗人 美国行崩溃](../../pages/nsc1028/n13807528.md) 
 #### [党史专家司马璐破碎的“延安梦”（4）：从“假想情敌”到“假想政敌”](../../pages/nsc1028/n13807524.md) 
-#### [党史专家司马璐破碎的“延安梦”（3）：“托派”阴影](../../pages/nsc1028/n13806978.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
