--- a/indexes/nsc993/90.md
+++ b/indexes/nsc993/90.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [刘元明：李中堂间接告诉全世界他将裸退？](../../pages/nsc993/n13836840.md) 
+#### [超九成受访者看好健康码？网友：“在党校统计的吧！”](../../pages/nsc993/n13836617.md) 
 #### [【网海拾贝】二十大召开在即，中国式“维稳”全面展开](../../pages/nsc993/n13836321.md) 
 #### [于凯：致唐一军部长的公开信](../../pages/nsc993/n13836331.md) 
 #### [从大陆网约车司机的变化看国运的兴衰](../../pages/nsc993/n13835978.md) 
@@ -28,8 +30,6 @@
 #### [祝君安：哀韭菜](../../pages/nsc993/n13831046.md) 
 #### [谢田：美国历史协会何以被认为在自杀](../../pages/nsc993/n13830975.md) 
 #### [宋征时：中共二十大代表周洪许的民间档案（三）](../../pages/nsc993/n13830725.md) 
-#### [李明：中共倒台已近 赶快“三退”自救](../../pages/nsc993/n13830258.md) 
-#### [金晶子：为香港祷告](../../pages/nsc993/n13830233.md) 
 
 ---
 #### 第 [ [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) ] 页
